--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
-    "test": "./node_modules/.bin/cypress open",
+    "test": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
